syntax = "proto3";

package solana.spl.token.balances.v1;

message Events {
  // https://github.com/solana-program/token-2022
  repeated Balance balances = 1;
}

message Balance {
  // -- transaction --
  bytes tx_hash = 1;

  // -- indexes --
  uint32 execution_index = 2;
  uint32 instruction_index = 3;
  uint32 inner_instruction_index = 4;

  // -- authority --
  bytes authority = 8;
  repeated bytes multisig_authority = 9;

  // -- data --
  bytes program_id = 10;
  bytes owner = 11;
  bytes mint = 12;
  uint64 amount = 13;
  uint32 decimals = 14; // uint8
}
